add 2FA and mocha testing
